Add colour, Modify links, Round corners, Add back to top button

--- a/template.html
+++ b/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,13 +11,25 @@
   <script src="prism/prism.js" defer></script>
   <script src="scripts/contents.js" defer></script>
 </head>
-<body id="top">
+<body>
   <div class="page">
     <header class="page-header">
       <h1>Page Topic</h1>
+
+      <p>
+        This is a brief overview of the page's topic.
+      </p>
+
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Enim quam quidem eveniet cupiditate aliquam consequatur
+        laboriosam id, odit quas atque.
+      </p>
     </header>
 
     <section>
+      <h2>Contents</h2>
+
       <ul id="contents">
 
       </ul>
@@ -88,6 +100,10 @@
         dolorum?
       </p>
     </section>
+
+    <footer>
+      <a href="#top" class="btn btn-top">Back to Top</a>
+    </footer>
   </div>
 </body>
 </html>
