Add quotes and captions

--- a/template.html
+++ b/template.html
@@ -44,6 +44,11 @@
         laboriosam id, odit quas atque.
       </p>
 
+      <blockquote cite="">
+        This is a quote from somewhere.
+      </blockquote>
+      <figcaption>Some Guy, <cite>Some Work</cite></figcaption>
+
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
         Itaque mollitia rem nam ipsa aut necessitatibus vitae 
