Add resources and web app fundamentals pages

--- a/template.html
+++ b/template.html
@@ -80,6 +80,9 @@
         Enim quam quidem eveniet cupiditate aliquam consequatur
         laboriosam id, odit quas atque.
       </p>
+
+      <img src="images/dev-console-network.png" alt="Screenshot of Google Chrome developer console">
+      <figcaption>Google Chrome developer console - network tab</figcaption>
       
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
