--- a/demos/events/simple calculator/index.html
+++ b/demos/events/simple calculator/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Exercise 8</title>
+  <title>Simple Calculator</title>
 
   <style>
 
