--- a/react.html
+++ b/react.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Express.js</title>
+  <title>React</title>
 
   <link rel="stylesheet" href="prism/prism.css">
   <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
 <body>
   <div class="page">
     <header class="page-header">
-      <h1>Express.js</h1>
+      <h1>React</h1>
 
       <p>
         A minimal web application framework for Node.js. Useful for creating 
