--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,19 @@
       <h2>JS Libraries</h2>
 
       <ul>
-        <li><a href="https://mathjs.org/" target="_blank">math.js</a></li>
+        <li><a href="https://mathjs.org/" target="_blank">Math.js</a></li>
+        <li><a href="https://lodash.com/" target="_blank">Lodash - Utility library</a></li>
+        <li><a href="https://github.com/jonschlinkert/remarkable" target="_blank">Remarkable - Markdown parser</a></li>
+        <li><a href="https://github.com/socketio/socket.io" target="_blank">Socket.IO</a></li>
+      </ul>
+    </section>
+
+    <section id="js-frameworks">
+      <h2>JS Frameworks</h2>
+
+      <ul>
+        <li><a href="https://reactjs.org/" target="_blank">React</a></li>
+        <li><a href="http://expressjs.com/" target="_blank">Express</a></li>
       </ul>
     </section>
     
@@ -54,7 +66,7 @@
       </ul>
     </section>
 
-    <section id="tutorials">
+    <section id="articles">
       <h2>Articles</h2>
       
       <ul>
