Add for-range, flatten-array, reduce, drag-and-drop demos, Update resources

--- a/resources.html
+++ b/resources.html
@@ -72,6 +72,13 @@
       <ul>
         <li><a href="https://auth0.com/blog/how-to-manage-javascript-fatigue/" target="_blank">auth0 - How to Manage JavaScript Fatigue</a></li>
       </ul>
+
+      <h3>Web browsers</h3>
+
+      <ul>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Supporting_Older_Browsers" target="_blank">MDN - Supporting older browsers</a></li>
+        <li><a href="https://browserhow.com/what-are-security-threats-with-old-outdated-browser-version/" target="_blank">BrowserHow - What are Security threats with old/outdated Browser version?</a></li>
+      </ul>
     </section>
 
     <footer>
