--- a/glossary.html
+++ b/glossary.html
@@ -63,6 +63,14 @@
       </p>
     </section>
 
+    <section id="restful-services">
+      <h2>RESTful Services</h2>
+
+      <p>
+        Representational State Transfer.
+      </p>
+    </section>
+
     <footer>
       <a href="#top" class="btn btn-top">Back to Top</a>
     </footer>
